--- a/Final.Web/_Imports.razor
+++ b/Final.Web/_Imports.razor
@@ -7,4 +7,5 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using Final.Web
-@using Final.Web.Layout
+@using Final.Web.Layouts
+@using MudBlazor
